2018-01-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m: keep checker happy by usingn return value of
	setsockopt.

2018-01-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFTPURLHandle.m: change memcpy to memmove to avoid possible
	problems with overlapping source and destination areas.
	* Source/Additions/Unicode.m: ensure iconv handle is closed
	* Source/NSXMLParser.m: fix incorrect type assignment

2018-02-01  Fred Kiefer <fredkiefer@gmx.de>

	* Source/GSFormat.m: Call va_end with the correct parameter.
	* Source/NSObject+NSComparisonMethods.m: Add missing return.
	* Source/GSString.m (-replaceCharactersInRange:withString:,
	-initWithBytesNoCopy:...freeWhenDone:): Remove dead code.
	* Source/NSDistantObject.m (-initWithCoder:): Remove dead code.
	* Source/NSPredicate.m (_eval_avg:): Don't devide by zero.
	Fix issues found by Coverity.

2018-01-26  Richard Frith-Macdonald <rfm@gnu.org>

	* NSCharacterSets/GNUmakefile:
	* NSCharacterSets/alphanumericCharSet.dat:
	* NSCharacterSets/controlCharSet.dat:
	* NSCharacterSets/dataToHeader.c:
	* NSCharacterSets/decimalDigitCharSet.dat:
	* NSCharacterSets/decomposableCharSet.dat:
	* NSCharacterSets/illegalCharSet.dat:
	* NSCharacterSets/letterCharSet.dat:
	* NSCharacterSets/lowercaseLetterCharSet.dat:
	* NSCharacterSets/newlineCharSet.dat:
	* NSCharacterSets/nonBaseCharSet.dat:
	* NSCharacterSets/punctuationCharSet.dat:
	* NSCharacterSets/symbolAndOperatorCharSet.dat:
	* NSCharacterSets/uppercaseLetterCharSet.dat:
	* NSCharacterSets/whitespaceAndNlCharSet.dat:
	* NSCharacterSets/whitespaceCharSet.dat:
	Obsolete files deleted.
	* NSCharacterSets/README.CharSet: updated
	* Source/NSCharacterSetData.h: regenerated using the ucsdata library
	and the charsets tools to take into account the fact that a unicode
	zero width space should be counted as white space by us.
	* Source/NSURL.m: A few OSX compatibility tweaks.
	* Tests/base/NSURL/basic.m: A couple more OSX compatibility tests.
